# damasc

./: .gitignore  Cargo.toml  README.md  example_bag  example_bundle  example_network.txt  vorfuehrung
js/: damasc.js
public/: index.html  style.css
src/: assignment.rs  bag.rs  bag_bundle.rs  env.rs  expression.rs  graph.rs  graph_solver.rs  identifier.rs  lib.rs  literal.rs  main.rs  matcher.rs  parser.rs  pattern.rs  query.rs  repl.rs  statement.rs  test.txt  test_expressions.txt  test_negative_patterns.txt  test_patterns.txt  test_topological.txt  test_topological_fail.txt  tests.txt  topology.rs  transaction.rs  typed_bag.rs  value.rs  wasm.rs
static/root/: style.css
templates/: 404.html.j2  base.html.j2  examples.html.j2  index.html  index.html.j2  repl.html.j2  result.html  result.html.j2
tests/: mod.rs  test_expressions.txt  test_patterns.txt  test_topological.txt
