[package]
name = "damasc"
version = "0.1.0"
edition = "2021"
default-run="cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
askama = "0.11.1"
gen-iter = "0.3.0"
nom = "7.1.2"
rustyline = "10.0.0"
serde = {version = "1.0.152", features = ["derive"]}
