[package]
name = "damasc"
version = "0.1.0"
edition = "2021"
default-run="cli"

[[bin]]
name = "cli"
required-features = ["cli"]
default-features = ["cli"]

[[bin]]
name = "web"
required-features = ["web"]
default-features = ["web"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cli","web"]
cli = ["rustyline"]
web = ["dep:actix-files", "dep:actix-web", "dep:serde", "dep:askama"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
cfg-if = {version="1.0.0"}
wasm-bindgen = {version="0.2.83"}
wee_alloc = {version="0.4.5"}

[dependencies]
gen-iter = "0.3.0"
nom = "7.1.2"
actix-files = {version = "0.6.2", optional = true}
actix-web = {version = "4.2.1", optional = true}
askama = {version = "0.11.1", optional = true}
rustyline = {version = "10.0.0", optional = true}
serde = {version = "1.0.152", features = ["derive"], optional = true}
futures = "0.3.25"
